# grpc_tests

./: .deepsource.toml  README.md  cli.py  consumer.py  events.proto  events_pb2.py  events_pb2_grpc.py  pyproject.toml  rmq_publisher.py  vendor.py
src/enki_grpc_client_test/: __init__.py
