[project]
name = "enki-grpc-client-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Akshat Jaimini", email = "akshat@deepsource.io" }
]
dependencies = [
    "pika>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-tools<1.74.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/enki_grpc_client_test"]
